--- a/src/components/mediumCard/mediumCard.module.css
+++ b/src/components/mediumCard/mediumCard.module.css
@@ -3,6 +3,7 @@
   width: 93.5%;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 0.8rem;
+  min-height: 25.3rem;
 }
 
 .main-container img {
